--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -1,44 +1,66 @@
-<div class="container">
+<div class="container margin-50">
     <div class="row">
       
-      <div class="col-md-6">
-        <h4>Nelson Arnoldo Jimenez Martinez</h4>
-        <p>Creative thinker and experienced software engineer with experience in bring up ideas to life from inception to deployment in production, accustomed to solving problems on the go at parallel with the develop </p>
-        <p>Studied at the University of El Salvador the most prestigious University of El Salvador and well known for the quality of their graduates, graduate in 2011 and make my own way to my first job at Avianca member of star alliance the same year, got me bachelor degree in software engineer at 2012, landing at the United States of America at 2017 and got a Job at Infosys at 2018 where I have been working to today.</p>
+      <div class="col-md-6" data-aos="fade-right" >
+        <div class="col-md-10">
+          <h3>Nelson Arnoldo Jimenez Martinez</h3>
+          <p>Creative thinker and experienced software engineer with experience in bring up ideas to life from inception to deployment in production, accustomed to solving problems on the go at parallel with the develop </p>
+          <p>Studied at the University of El Salvador the most prestigious University of El Salvador and well known for the quality of their graduates, graduate in 2011 and make my own way to my first job at Avianca member of star alliance the same year, got me bachelor degree in software engineer at 2012, landing at the United States of America at 2017 and got a Job at Infosys at 2018 where I have been working to today.</p>
+        </div>
+        
       </div>
   
-      <div class="col-md-6 shadow-linear">
+      <div class="col-md-6 shadow-linear" data-aos="fade-left">
         <!--<img src="assets/images/avianca.jpg" class="img-responsive">-->
         <img src="assets/images/profile_pic1.jpg" class="img-responsive" id="profile_pic">
       </div>
   
-    </div>
-  
-  </div>
-  <div class="container text-center">
+    </div>  
+</div>
+
+  <div class="container text-center" data-aos="zoom-in-up">
     <h2>Experience</h2>
   </div>
 
   <div class="container">
     <div class="row">
       
-      <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 justify">
-        <h4><a href="#hiddenAvianca" data-toggle="collapse">Avianca</a></h4>
+      <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 justify" data-aos="zoom-in-right">
+        <!--<h4><a href="#hiddenAvianca" data-toggle="collapse">Avianca</a></h4>-->
+        <h3>Avianca</h3>
+          
+        <div >
+          <p>
+            Software engineer/Technology Analyst at Avianca 2011-2017
+            Avianca a star alliance member is one of the biggest airlines in the south and central America with operation around the globe, my work in the company as part of the IT had to work with the different teams of the business as revenue, agreements, ops, refunds, sap in recollecting features/enhancements and making into functionalities to the actual systems at Avianca, as well I had worked in the major projects of the company like remaking existing applications in old technologies and bringing back to life in new technologies, such as API rest new frameworks of dot Net, Oracle, spring, Hibernate, javascript,jquery
+          </p>
+        </div>
+        <!--
         <div id="hiddenAvianca" class="collapse justify">
           <p>
             Software engineer/Technology Analyst at Avianca 2011-2017
             Avianca a star alliance member is one of the biggest airlines in the south and central America with operation around the globe, my work in the company as part of the IT had to work with the different teams of the business as revenue, agreements, ops, refunds, sap in recollecting features/enhancements and making into functionalities to the actual systems at Avianca, as well I had worked in the major projects of the company like remaking existing applications in old technologies and bringing back to life in new technologies, such as API rest new frameworks of dot Net, Oracle, spring, Hibernate, javascript,jquery
           </p>
         </div>
+        -->
       </div>
   
-      <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+      <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12" data-aos="zoom-in-up">
         <h4><a href="#hidden" data-toggle="collapse"><img src="assets/images/avianca.jpeg" class="img-responsive"></a></h4>
         
       </div>
   
       <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-        <h4><a href="#hidden" data-toggle="collapse">Infosys</a></h4>
+        <!--<h4><a href="#hidden" data-toggle="collapse">Infosys</a></h4>-->
+        <h3>Infosys</h3>
+        <div>
+          <p>
+            Infosys - Technology Especialyst 2018 - Actual work 
+            Infosys Technologies Limited (NASDAQ: INFY) is a multinational information technology services company based in Bangalore, India. Infosys is one of the largest IT companies in India with 127,779 employees including subsidiaries (as of December 2010), spread across 65 offices and 59 development centers in India, China, Australia, the Czech Republic, Costa Rica, Poland, England, Canada, United States, and Japan, they are one of the leaders in IT and consulting.
+            At Infosys.
+          </p>
+        </div>
+        <!--
         <div id="hidden" class="collapse justify">
           <p>
             Infosys - Technology Especialyst 2018 - Actual work 
@@ -46,7 +68,7 @@
             At Infosys.
           </p>
         </div>
-        
+        -->
         
       </div>
   
@@ -95,7 +117,51 @@ End Slider-->
 
   <!--Skill icons-->
   <div class="container text-center">
-    <h2>Skills</h2>
+    <h2>Skills Sets</h2>
+    <div class="row">
+      <div class="col-lg-4">
+        <h4>RTS - Refund Tracking system API</h4>
+      </div>
+      <div class="col-lg-4">
+        <skill-button [picPath]="articlePictures[4].path" [description]="C" ></skill-button>
+        <skill-button [picPath]="articlePictures[12].path" [description]="C" ></skill-button>
+      </div>
+      <div class="col-lg-4">
+        <skill-button [picPath]="articlePictures[16].path" [description]="C" ></skill-button>
+        <skill-button [picPath]="articlePictures[17].path" [description]="C" ></skill-button>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-lg-4">
+        <h4>TIS - Tax Information Service</h4>
+      </div>
+      
+      <div class="col-lg-4">
+        <skill-button [picPath]="articlePictures[7].path" [description]="C" ></skill-button>
+        <skill-button [picPath]="articlePictures[8].path" [description]="C" ></skill-button>
+      </div>
+
+      <div class="col-lg-4">
+        <skill-button [picPath]="articlePictures[12].path" [description]="C" ></skill-button>
+        <skill-button [picPath]="articlePictures[0].path" [description]="C" ></skill-button>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-lg-4">
+        <a href="http://monstermatchunity.s3-website-us-west-1.amazonaws.com/"><h4>Game in development with Unity 2D</h4></a>
+      </div>
+      <div class="col-lg-4">
+        <skill-button [picPath]="articlePictures[4].path" [description]="C" ></skill-button>
+        <skill-button [picPath]="articlePictures[18].path" [description]="C" ></skill-button>
+      </div>
+      <div class="col-lg-4">
+        <skill-button [picPath]="articlePictures[19].path" [description]="C" ></skill-button>
+        <skill-button [picPath]="articlePictures[20].path" [description]="C" ></skill-button>
+      </div>
+    </div>
+
     <div class="row">
 
       <div *ngFor="let pic of articlePictures" class="col-sm-3">
@@ -120,8 +186,8 @@ End Slider-->
 
 <div class="container">
   <div class="row">
-    <h4><a href="#hidden" data-toggle="collapse">Care to learn more about bootstrap.</a></h4>
-    <div id="hidden" class="collapse">
+    <h4><a href="#hidden-bootstrap" data-toggle="collapse">Care to learn more about bootstrap.</a></h4>
+    <div id="hidden-bootstrap" class="collapse">
       <h4>Here's the cool thing about Bootstrap...</h4>
       <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
       <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
