--- a/src/styles.css
+++ b/src/styles.css
@@ -157,9 +157,14 @@
 
   body{
     font-family: 'Roboto', sans-serif;
-    font-size: large;
-    color:black;
+    font-size:19px;
+    color: whitesmoke;
     
+  }
+
+  a{
+    text-decoration: none;
+    color: whitesmoke;
   }
 
   .div-2c{
