--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -70,51 +70,104 @@
   
 </div>
 
-<div class="container text-center">
+<div class="container margin-50"></div>
+
+<div class="container text-center" data-aos="fade-up" data-aos-duration="2000">
   <h2>Skills Sets</h2>
+  <div class="container margin-50"></div>
   <div class="row">
-    <div class="col-lg-4">
+    <div class="col-lg-4" data-aos="fade-right" data-aos-duration="2000">
       <h4>RTS - Refund Tracking system API</h4>
     </div>
     <div class="col-lg-4">
-      <skill-button [picPath]="articlePictures[4].path" [description]="C" ></skill-button>
-      <skill-button [picPath]="articlePictures[12].path" [description]="C" ></skill-button>
+      <skill-button [picPath]="articlePictures[4].path" [description]="C" 
+      data-aos="fade-up"
+      data-aos-delay="10"
+      data-aos-duration="1000"
+      data-aos-easing="ease-in-out"></skill-button>
+      <skill-button [picPath]="articlePictures[12].path" [description]="C"
+      data-aos="fade-up"
+      data-aos-delay="50"
+      data-aos-duration="1500"
+      data-aos-easing="ease-in-out"></skill-button>
     </div>
     <div class="col-lg-4">
-      <skill-button [picPath]="articlePictures[16].path" [description]="C" ></skill-button>
-      <skill-button [picPath]="articlePictures[17].path" [description]="C" ></skill-button>
+      <skill-button [picPath]="articlePictures[16].path" [description]="C" 
+      data-aos="fade-up"
+      data-aos-delay="100"
+      data-aos-duration="2000"
+      data-aos-easing="ease-in-out"></skill-button>
+      <skill-button [picPath]="articlePictures[17].path" [description]="C"
+      data-aos="fade-up"
+      data-aos-delay="150"
+      data-aos-duration="2500"
+      data-aos-easing="ease-in-out"></skill-button>
     </div>
   </div>
-
+  <div class="container margin-50"></div>
   <div class="row">
-    <div class="col-lg-4">
+    <div class="col-lg-4" data-aos="fade-right" data-aos-duration="2000">
       <h4>TIS - Tax Information Service</h4>
     </div>
     
     <div class="col-lg-4">
-      <skill-button [picPath]="articlePictures[7].path" [description]="C" ></skill-button>
-      <skill-button [picPath]="articlePictures[8].path" [description]="C" ></skill-button>
+      <skill-button [picPath]="articlePictures[7].path" [description]="C" 
+      data-aos="fade-up"
+      data-aos-delay="10"
+      data-aos-duration="1000"
+      data-aos-easing="ease-in-out"></skill-button>
+      <skill-button [picPath]="articlePictures[8].path" [description]="C" 
+      data-aos="fade-up"
+      data-aos-delay="50"
+      data-aos-duration="1500"
+      data-aos-easing="ease-in-out"></skill-button>
     </div>
 
     <div class="col-lg-4">
-      <skill-button [picPath]="articlePictures[12].path" [description]="C" ></skill-button>
-      <skill-button [picPath]="articlePictures[0].path" [description]="C" ></skill-button>
+      <skill-button [picPath]="articlePictures[12].path" [description]="C" 
+      data-aos="fade-up"
+      data-aos-delay="100"
+      data-aos-duration="2000"
+      data-aos-easing="ease-in-out"></skill-button>
+      <skill-button [picPath]="articlePictures[0].path" [description]="C" 
+      data-aos="fade-up"
+      data-aos-delay="150"
+      data-aos-duration="2500"
+      data-aos-easing="ease-in-out"></skill-button>
     </div>
   </div>
 
+  <div class="container margin-50"></div>
   <div class="row">
-    <div class="col-lg-4">
+    <div class="col-lg-4" data-aos="fade-right" data-aos-duration="2000">
       <a href="http://monstermatchunity.s3-website-us-west-1.amazonaws.com/"><h4>Game in development with Unity 2D</h4></a>
     </div>
     <div class="col-lg-4">
-      <skill-button [picPath]="articlePictures[4].path" [description]="C" ></skill-button>
-      <skill-button [picPath]="articlePictures[18].path" [description]="C" ></skill-button>
+      <skill-button [picPath]="articlePictures[4].path" [description]="C" 
+      data-aos="fade-up"
+      data-aos-delay="10"
+      data-aos-duration="1000"
+      data-aos-easing="ease-in-out"></skill-button>
+      <skill-button [picPath]="articlePictures[18].path" [description]="C" 
+      data-aos="fade-up"
+      data-aos-delay="50"
+      data-aos-duration="1500"
+      data-aos-easing="ease-in-out"></skill-button>
     </div>
     <div class="col-lg-4">
-      <skill-button [picPath]="articlePictures[19].path" [description]="C" ></skill-button>
-      <skill-button [picPath]="articlePictures[20].path" [description]="C" ></skill-button>
+      <skill-button [picPath]="articlePictures[19].path" [description]="C" 
+      data-aos="fade-up"
+      data-aos-delay="100"
+      data-aos-duration="2000"
+      data-aos-easing="ease-in-out"></skill-button>
+      <skill-button [picPath]="articlePictures[20].path" [description]="C" 
+      data-aos="fade-up"
+      data-aos-delay="150"
+      data-aos-duration="2500"
+      data-aos-easing="ease-in-out"></skill-button>
     </div>
   </div>
+  <div class="container margin-50"></div>
 </div>
   
 
@@ -227,14 +280,4 @@ End Slider-->
 
 <!--Skill Icons end-->
 
-<div class="container">
-  <div class="row">
-    <h4><a href="#hidden-bootstrap" data-toggle="collapse">Care to learn more about bootstrap.</a></h4>
-    <div id="hidden-bootstrap" class="collapse">
-      <h4>Here's the cool thing about Bootstrap...</h4>
-      <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-      <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-    </div>
-  </div>
-</div>
 
