--- a/src/styles.css
+++ b/src/styles.css
@@ -178,7 +178,7 @@
   }
 
   body { 
-    background: url(assets/images/deep-blue-2.jpg) no-repeat center center fixed; 
+    background: url(assets/images/deep-blue-2.jpg) no-repeat center  fixed; 
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
