--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,5 @@
-<nav class="navbar navbar-inverse shadow-line sticky-top">
+<div data-aos="fade-down" data-aos-duration="1500">
+  <nav class="navbar navbar-inverse shadow-line sticky-top">
     <div class="container-fluid">
       <div class="collapse navbar-collapse" id="myNavbar">
         <ul class="nav navbar-nav navbar-right sticky-top">
@@ -17,4 +18,5 @@
       </div>
 
     </div>
-</nav>
+  </nav>
+</div>
