--- a/src/app/footer/footer/footer.component.html
+++ b/src/app/footer/footer/footer.component.html
@@ -1,4 +1,5 @@
-<footer class="container-fluid text-rigth">
+<div data-aos="fade-up" data-aos-duration="3000">
+  <footer class="container-fluid text-rigth">
     <div class="row" style="padding-left: 3%;">
       <div class="col-sm-4" >
         <h3>Nelson Arnoldo Jimenez Martinez</h3> 
@@ -13,9 +14,7 @@
         <!--<a href="" class="fa fa-google"></a>-->
         <a href="" class="fa fa-linkedin"></a>
         <!--<a href="" class="fa fa-youtube"></a>-->
-      </div>
-  
-     
-  
+      </div>  
     </div>
   </footer>
+</div>
